--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "devDependencies": {
     "@types/ip": "^1.1.0",
+    "@types/leveldown": "^4.0.2",
+    "@types/levelup": "^4.3.0",
     "@types/node": "^14.14.28",
     "@types/sqlite3": "^3.1.7",
     "typescript": "^4.1.5"
@@ -18,6 +20,8 @@
   "dependencies": {
     "@kaguragateway/y-node-utils": "^1.0.18",
     "ip": "^1.1.5",
+    "leveldown": "^5.6.0",
+    "levelup": "^4.4.0",
     "sqlite3": "^5.0.2"
   }
 }
